bitfields/tests/compile_error_cases/errors/bitflag_non_enum.rs
use bitfields::bitflag;

#[bitflag(u8)]
pub struct Flags {
    a: u8,
}

fn main() {}

