bitfields/tests/compile_error_cases/errors/bitflag_non_enum.stderr
error: expected `enum`
 --> tests/compile_error_cases/errors/bitflag_non_enum.rs:4:5
  |
4 | pub struct Flags {
  |     ^^^^^^
